--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="batdau">
 			<ul class="batdau1">
-				<a href="#"> <p> BẮT ĐẦU </p></a>
+				<button type="button"> Bắt Đầu </button> 
 			<li> 
 				<p>Nhận email tùy chỉnh và các tính năng khác với Gmail for work</p>
 			</li>	
